src/objects/LeanData__Opportunity_Campaign_Member__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Campaign Members</relationshipLabel>
        <relationshipName>Opportunity_Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Campaign_Member_Created_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign Member Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Campaign_Member_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign Member Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunity Campaign Members</relationshipLabel>
        <relationshipName>Opportunity_Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact_Role__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Campaign Members</relationshipLabel>
        <relationshipName>Opportunity_Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunity Campaign Members</relationshipLabel>
        <relationshipName>Opportunity_Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Opportunity_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Opportunity Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Campaign Members</relationshipLabel>
        <relationshipName>Opportunity_Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__temp_Weighted_Campaign_Attribution__c</fullName>
        <label>temp Weighted Campaign Attribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__temp_Weighted_Campaign_Member_Attributio__c</fullName>
        <label>temp Weighted Campaign Member Attributio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Campaign Member</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Opportunity Campaign Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Campaign Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>